# skeleton3D

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/conf/: collaboration.ini  skeleton3D.ini  visuoTactileCalib.ini
app/script/: PPS_modulation_iCubSim_skeleton3D.xml  PPS_modulation_iCub_skeleton3D.xml  PPS_modulation_iCub_skeleton3D_openpose.xml  PPS_modulation_iCub_skeleton3D_yarpOpenPose.xml  PPS_visuoTactileCalib_datadumper.xml  PPS_visuoTactileRF_reactCtrl_dumper.xml  iolVM_Phuong.xml  ontheflyRecognition_PPS_both.xml
icubCollaboration/: CMakeLists.txt  collaboration.cpp  collaboration.h  collaboration.thrift  main.cpp
include/: skeleton3D.h
lib/: CMakeLists.txt
lib/include/iCub/vtMappingTF/: vtMappingTF.h
lib/src/: vtMappingTF.cpp
matlab/: cluster_3d_points.m  drawCube.m  fig_all_in.m  find_dist_kpEv_C.m  find_dist_kpEv_skin_part.m  find_idx_in_duration.m  import_keypoints.m  import_ppsEvents.m  import_visuoTactileRF.m  importfile_joints_arm.m  importfile_joints_torso.m  importfile_keypoints.m  importfile_ppsEvent.m  importfile_skinEvAggreg.m  inMatrix.csv  inMatrix_balanced.csv  plot_RF.m  plot_activation.m  plot_distance.m  plot_keypoint.m  plot_kp_skinPart_3d.m  plot_reactCtrl_planner.m  plot_results_HRI2018.m  plot_results_Humanoids2018.m  plot_skinPart_3D.m  plot_sphere.m  process_dumped_data.m  process_keypoint_pps_reactCtrl.m  process_ppsEvents.m  process_skinEvents.m  refMatrix.csv  refMatrix_balanced.csv  set_tight_border.m  test_import.m
matlab/datasets/HRI2018/: README.md
matlab/datasets/Humanoids2018/: README.md
matlab/dumps/: importfile.m  plots.m
matlab/ppsTaxelsFiles/: taxels1D_45cmRF_skinV2_empty.ini  taxels1D_45cmRF_skinV2_perfect_all.ini  taxels1D_45cmRF_skinV2_perfect_l_forearm.ini  taxels1D_45cmRF_skinV2_perfect_l_hand.ini  taxels1D_45cmRF_skinV2_perfect_r_forearm.ini  taxels1D_45cmRF_skinV2_perfect_r_hand.ini  taxels1D_learnedAll.ini  taxels1D_learned_l_forearm.ini  taxels1D_learned_l_hand.ini  taxels1D_learned_r_forearm.ini  taxels1D_learned_r_hand.ini
matlab/reactController/: analyze.m  myEuclDist3d.m  myEuclDist3d_matrix.m
matlab/results/: distance_activation_valence-1.eps  distance_activation_valence-1_cut.eps  exp_distance_activation_valence-1_cut.eps  exp_joint_vel_valence-1_cut.eps  joint_vel_valence-1.eps  joint_vel_valence-1_cut.eps  v_joints_lim_valence-1.eps
python/: datafiles_times.txt  head_process_KIA.py  head_process_KIA_batch.py
skeleton3D/: CMakeLists.txt  main.cpp  skeleton3D.cpp  skeleton3D.h  skeleton3D.thrift  udp_client_server.cpp  udp_client_server.h
src/: main.cpp  skeleton3D.cpp
tensorflow/: calibrator.py  calibrator1.py  calibrator1_no_queue.py  freeze_calibrator.py
tensorflow/model/: mapping_graph.pb  output_graph.pb
visuoTactileCalib/: CMakeLists.txt  visuoTactileCalib.cpp  vtCalib.cpp  vtCalib.h  vtCalibModule.cpp
visuoTactileCalib/old/: visuoTactileCalib.cpp
yetAnotherAvoidance/: CMakeLists.txt  yetAnotherAvoidance.cpp
