# Copyright: (C) 2017 iCub Facility - Istituto Italiano di Tecnologia
# Author: Nguyen Dong Hai Phuong
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

#make_minimum_required(VERSION 2.8)
#project(motionPlan)

include(CMakeDependentOption)

set(PROJECTNAME vtMappingTF)
#set(PROJECTNAME reaching-with-avoidance)
project(${PROJECTNAME})

find_package(TensorflowCC REQUIRED)

include_directories(${YARP_INCLUDE_DIRS})
include_directories(${ICUB_INCLUDE_DIRS})
#include_directories(${IPOPT_INCLUDE_DIRS})

set(folder_source src/vtMappingTF.cpp)

set(folder_header include/iCub/vtMappingTF/vtMappingTF.h)

include_directories(${PROJECT_SOURCE_DIR}/include)

source_group("Source Files" FILES ${folder_source})
source_group("Header Files" FILES ${folder_header})

#add_definitions(${IPOPT_DEFINITIONS} -D_USE_MATH_DEFINES)
add_library(${PROJECTNAME} ${folder_source} ${folder_header})
#set_property(TARGET ${PROJECTNAME} APPEND_STRING PROPERTY LINK_FLAGS " ${IPOPT_LINK_FLAGS}")
target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES} TensorflowCC::Shared)
icubcontrib_export_library(${PROJECTNAME} INTERNAL_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
                                          EXTERNAL_INCLUDE_DIRS ${YARP_INCLUDE_DIRS} ${ICUB_INCLUDE_DIRS}}
                                          DESTINATION include/iCub/${PROJECTNAME}
                                          FILES ${folder_header})
# export library
export(TARGETS ${PROJECTNAME} FILE ${CMAKE_BINARY_DIR}/vtMappingTF-export-build.cmake)
set(EXPORT_INCLUDE_FILE vtMappingTFConfig.cmake)
file(WRITE  ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "# This file is automatically generated\n")
file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "###################\n")
file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "# List of include directories for exported targets\n\n")
file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "set(vtMappingTF_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include CACHE STRING \"include dir for vtMappingTF\")\n")
file(APPEND ${CMAKE_BINARY_DIR}/${EXPORT_INCLUDE_FILE} "include(\"${CMAKE_BINARY_DIR}/vtMappingTF-export-build.cmake\")\n")
